test/files/neg/t2462a.check
t2462a.scala:6: error: Cannot construct a collection of type List[String] with elements of type Int based on a collection of type List[Int].
  def foo(l: Lst[Int]) = l.map[Int, List[String]](x => 1)
                                                 ^
1 error
